Fixed styles for small screen. Noticed the font size was 1px too large. Fixed that too.

--- a/assets/sass/patterns/atoms/doi.scss
+++ b/assets/sass/patterns/atoms/doi.scss
@@ -2,9 +2,9 @@
 .doi {
   color: $color-text-placeholder;
   font-family: $font-secondary;
-  @include font-size(12);
+  @include font-size(11);
   font-weight: 600;
-  line-height: 1.3;
+  line-height: 1;
 }
 
 .doi__link {
